--- a/about.html
+++ b/about.html
@@ -51,14 +51,15 @@
 
   <main>
     <section aria-labelledby="mission">
-      <h2 id="mission">Our Mission</h2>
-      <p>THQ Cyber Division helps organizations, researchers, and security teams protect digital assets, reputation, and operations. We deliver trusted cyber threat intelligence, robust infrastructure services, and enterprise-grade certificates — all with a focus on privacy, ethics, and technical excellence.</p>
-    </section>
+  <h2 id="mission">Our Mission</h2>
+  <p>THQ Cyber Division protects society from cyber threats by helping organizations, researchers, and security teams safeguard digital assets, reputation, and operations. We deliver trusted cyber threat intelligence, resilient infrastructure services, and enterprise-grade certificates — all guided by privacy, ethics, and technical excellence.</p>
+</section>
 
-    <section aria-labelledby="who">
-      <h2 id="who">Who We Are</h2>
-      <p>We are a small, experienced team of security analysts, infrastructure engineers, and certificate specialists. Our backgrounds include threat research, incident response, secure hosting architecture, and commercial certificate lifecycle management. We collaborate with clients to build pragmatic security programs tailored to risk, compliance, and operational requirements.</p>
-    </section>
+<section aria-labelledby="vision">
+  <h2 id="vision">Our Vision</h2>
+  <p>To create a safer digital world by empowering organizations and individuals to proactively defend against cyber threats, fostering trust, resilience, and responsible use of technology across society.</p>
+</section>
+
 
     <section aria-labelledby="services">
       <h2 id="services">Our Services</h2>
@@ -91,5 +92,18 @@
   <footer>
     © 2024–2025 THQ Cyber Division Unincorporated
   </footer>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6927884137e09f19631a6b8e/1jb16og5k';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
