--- a/services.html
+++ b/services.html
@@ -407,8 +407,8 @@
 <!-- Sophos Cybersecurity Suite -->
 <div class="card">
   <h3>Sophos Cybersecurity Suite</h3>
-  <img src="https://images.seeklogo.com/logo-png/30/1/sophos-logo-png_seeklogo-303124.png" 
-       alt="Sophos Cybersecurity Suite" 
+  <img src="https://assets.sophos.com/X24WTUEQ/at/t75gvpqr7w8jtcsmgkk7gn93/sophos-logo-tagline.svg?auto=webp&format=png" 
+       alt="sophos-logo-tagline" 
        style="width:100%;border-radius:10px;margin:10px 0;">
   <p>Enterprise-grade protection combining endpoint defense, firewalls, and managed detection.</p>
   <ul>
