--- a/services.html
+++ b/services.html
@@ -407,7 +407,7 @@
 <!-- Sophos Cybersecurity Suite -->
 <div class="card">
   <h3>Sophos Cybersecurity Suite</h3>
-  <img src="https://assets.sophos.com/X24WTUEQ/at/t75gvpqr7w8jtcsmgkk7gn93/sophos-logo-tagline.svg?auto=webp&format=png" 
+  <img src="https://assets.sophos.com/X24WTUEQ/at/t75gvpqr7w8jtcsmgkk7gn93/sophos-logo-tagline.svg?auto=webp&format=png&width=1500&height=250" 
        alt="sophos-logo-tagline" 
        style="width:100%;border-radius:10px;margin:10px 0;">
   <p>Enterprise-grade protection combining endpoint defense, firewalls, and managed detection.</p>
