--- a/services.html
+++ b/services.html
@@ -409,7 +409,7 @@
   <h3>Sophos Cybersecurity Suite</h3>
   <img src="https://assets.sophos.com/X24WTUEQ/at/t75gvpqr7w8jtcsmgkk7gn93/sophos-logo-tagline.svg?auto=webp&format=png&width=1500&height=250" 
        alt="sophos-logo-tagline" 
-       style="width:100%;border-radius:10px;margin:10px 0;"><br/><br/><br/>
+       style="width:100%;border-radius:10px;margin:10px 0;"><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   <p>Enterprise-grade protection combining endpoint defense, firewalls, and managed detection.</p>
   <ul>
     <li>AI-powered endpoint protection</li>
