--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Contact THQ Cyber Division Unincorporated for inquiries, support, or collaboration.">
   <link rel="stylesheet" href="main.css">
+  <!-- ================= Security Hardening ================= -->
+<meta http-equiv="X-Content-Type-Options" content="nosniff">
+<meta http-equiv="X-Frame-Options" content="DENY">
+<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+<meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
+<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="X-XSS-Protection" content="1; mode=block">
+<meta http-equiv="Permissions-Policy" content="
+  geolocation=(),
+  camera=(),
+  microphone=(),
+  payment=(),
+  usb=()
+">
+
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to https://formspree.io;
+  style-src 'self' 'unsafe-inline';
+  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com;
+  frame-src https://embed.tawk.to https://formspree.io;
+  connect-src 'self' https://formspree.io;
+  font-src 'self';
+  object-src 'none';
+  base-uri 'self';
+  form-action 'self' https://formspree.io;
+  frame-ancestors 'none';
+">
+<!-- ======================================================= -->
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; color: #000; }
     header, footer { background: #000; color: #fff; text-align: center; padding: 15px 0; }
