Add articles on new security offerings and Sophos Firewall
Added articles on upcoming security products and Sophos Firewall v22, detailing features and benefits.

--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,185 @@
       <p><a class="cta" href="services.html">View Sectigo & Certificate Services</a></p>
     </section>
 
+
+<!-- Article: Introducing Upcoming Security Products — DigiCert Code Signing, Email Security & WAF Solutions -->
+<article id="upcoming-security-products">
+  <h2>Introducing New Security Products: DigiCert Code Signing, Email Protection & Web Application Firewall (WAF)</h2>
+  <p class="meta">Published: 2025-12-25 — Author: THQ Cyber Division</p>
+
+  <img
+    class="hero-img"
+    src="https://cdn.pixabay.com/photo/2023/07/19/06/19/ai-generated-8136169_960_720.png"
+    alt="Security products and protection illustration"
+  />
+
+  <p>
+    As cyber threats continue to evolve, organizations need comprehensive security tools that protect not only network perimeters, but also applications, code integrity, and digital communications. THQ Cyber Division is excited to introduce three upcoming offerings designed to strengthen your security posture: <strong>DigiCert Code Signing Certificates</strong>, enhanced <strong>Email Security</strong> solutions, and an advanced <strong>Web Application Firewall (WAF)</strong).
+  </p>
+
+  <h3>DigiCert Code Signing Certificates</h3>
+  <p>
+    Software integrity and trust begin at the code level. DigiCert Code Signing Certificates provide developers and organizations with a trusted way to sign software, scripts, and applications. Digitally signing code assures users and endpoint security systems that the software has not been tampered with since it was signed.
+  </p>
+  <ul>
+    <li><strong>Verified publisher identity:</strong> Certificates confirm the software publisher’s identity to end users and systems.</li>
+    <li><strong>Integrity assurance:</strong> Code signatures detect unauthorized modifications.</li>
+    <li><strong>Platform compatibility:</strong> Supported on major operating systems, development tools, and distribution platforms.</li>
+    <li><strong>Timestamping:</strong> Ensures signatures remain valid even after certificate expiration.</li>
+  </ul>
+  <p>
+    Code signing certificates are essential for enterprise software distribution, DevOps pipelines, and applications used in regulated environments where trust and compliance are critical.
+  </p>
+
+  <h3>Advanced Email Security Solutions</h3>
+  <p>
+    Email remains one of the primary attack vectors for phishing, business email compromise (BEC), and malware distribution. Our upcoming email security suite combines advanced filtering, authentication, and encryption to safeguard communications across your organization.
+  </p>
+  <ul>
+    <li><strong>Spam & phishing protection:</strong> Machine learning–enhanced filters identify and block malicious email before it reaches users.</li>
+    <li><strong>DMARC, DKIM & SPF enforcement:</strong> Helps prevent domain spoofing and improve email deliverability.</li>
+    <li><strong>Secure email encryption:</strong> Protects sensitive content in transit and at rest.</li>
+    <li><strong>Threat reporting dashboards:</strong> Visibility into attempted attacks and user risk profiles.</li>
+  </ul>
+  <p>
+    These capabilities help reduce operational risk, improve compliance posture, and ensure business communications remain trustworthy.
+  </p>
+
+  <h3>Web Application Firewall (WAF) Solutions</h3>
+  <p>
+    Modern applications face a broad spectrum of threats, from SQL injection and cross-site scripting (XSS) to bot attacks and layer 7 DDoS. A Web Application Firewall (WAF) acts as a robust security layer that inspects and filters HTTP/HTTPS traffic to protect web applications from known and emerging threats.
+  </p>
+  <ul>
+    <li><strong>SQL injection & XSS protection:</strong> Guard against common application-layer attacks.</li>
+    <li><strong>Bot mitigation:</strong> Detects and manages automated traffic with adaptive rules.</li>
+    <li><strong>Custom rule sets:</strong> Tailor protections to your application logic and risk profile.</li>
+    <li><strong>Real-time analytics:</strong> Insights into traffic patterns and blocked attack attempts.</li>
+  </ul>
+  <p>
+    Whether deployed inline, as part of a cloud service, or integrated with your existing CDN, our WAF solutions help ensure application uptime while reducing attack surface.
+  </p>
+
+  <h3>Business Benefits of a Unified Security Strategy</h3>
+  <p>
+    While each of these products serves a unique role—code signing for software integrity, email security for communications protection, and WAF for application defense—together they contribute to a unified and resilient security strategy. Businesses that invest in layered defenses see reduced risk, enhanced customer trust, and improved operational stability.
+  </p>
+  <p>
+    THQ Cyber Division’s upcoming offerings are designed to simplify procurement, integrate seamlessly with existing infrastructure, and provide enterprise-grade controls with manageable administration.
+  </p>
+
+  <div class="share">
+    <a
+      href="https://www.linkedin.com/sharing/share-offsite/?url=https://thqcyberdivision.github.io/blog.html#upcoming-security-products"
+      target="_blank"
+      rel="noreferrer noopener"
+    >Share on LinkedIn</a>
+    <a
+      href="https://twitter.com/intent/tweet?text=Upcoming%20Security%20Products%20by%20THQ%20Cyber%20Division&url=https://thqcyberdivision.github.io/blog.html#upcoming-security-products"
+      target="_blank"
+      rel="noreferrer noopener"
+    >Share on Twitter</a>
+  </div>
+</article>
+
+    
+    <!-- Article: Sophos Firewall v22 -->
+<article id="sophos-firewall-v22">
+  <h2>Sophos Firewall v22: Practical Security, Performance, and Operational Control</h2>
+  <p class="meta">Published: 2025-11-25 — Author: THQ Cyber Division</p>
+
+  <img
+    class="hero-img"
+    src="https://assets.sophos.com/X24WTUEQ/at/t75gvpqr7w8jtcsmgkk7gn93/sophos-logo-tagline.svg?auto=webp&format=png&width=1500&height=250"
+    alt="Abstract network security illustration"
+  />
+
+  <p>
+    Sophos Firewall v22 represents a continued evolution of the Sophos platform
+    toward simpler operations, stronger threat prevention, and performance that
+    scales from small offices to distributed enterprises. Rather than focusing on
+    isolated features, v22 emphasizes integrated security: networking, threat
+    intelligence, and policy control working together to reduce risk without
+    increasing administrative burden.
+  </p>
+
+  <h3>Architecture and Design Philosophy</h3>
+  <p>
+    At its core, Sophos Firewall v22 is built around centralized visibility and
+    policy-driven enforcement. The firewall is designed to act as a convergence
+    point for perimeter security, remote access, and application control—reducing
+    the need for multiple overlapping appliances.
+  </p>
+
+  <ul>
+    <li><strong>Single-console management:</strong> Network, security, and VPN policies administered from a unified interface.</li>
+    <li><strong>Identity-aware enforcement:</strong> Policies tied to users and groups, not just IP addresses.</li>
+    <li><strong>Predictable performance:</strong> Optimized inspection paths maintain throughput with advanced protections enabled.</li>
+  </ul>
+
+  <h3>Threat Prevention and Intelligence</h3>
+  <p>
+    Sophos Firewall v22 integrates closely with Sophos threat intelligence
+    services to deliver real-time protection against known and emerging attacks.
+    Multiple detection layers are combined to address modern threat vectors.
+  </p>
+
+  <ul>
+    <li><strong>Next-generation IPS:</strong> Deep packet inspection with continuously updated attack patterns.</li>
+    <li><strong>Advanced malware protection:</strong> Blocking malicious payloads before they reach endpoints.</li>
+    <li><strong>Web and application control:</strong> Granular policies for SaaS platforms and business applications.</li>
+    <li><strong>Encrypted traffic inspection:</strong> Controlled TLS inspection with defined privacy boundaries.</li>
+  </ul>
+
+  <h3>Secure Remote Access and VPN</h3>
+  <p>
+    Sophos Firewall v22 strengthens support for hybrid and remote environments
+    through improved SSL VPN and IPsec VPN capabilities. User-based access
+    controls align remote connectivity with organizational identity policies.
+  </p>
+
+  <h3>Cloud and Hybrid Readiness</h3>
+  <p>
+    Deployment flexibility is a core feature of v22. Whether deployed as a
+    physical appliance, virtual firewall, or cloud instance, policies and
+    visibility remain consistent across environments.
+  </p>
+
+  <h3>Operational Visibility and Reporting</h3>
+  <p>
+    Enhanced dashboards and reporting provide insight into application usage,
+    threat activity, and user behavior. This visibility supports faster incident
+    response and audit-ready documentation.
+  </p>
+
+  <h3>Business Value</h3>
+  <ul>
+    <li><strong>Risk reduction:</strong> Layered protection lowers exposure to modern attacks.</li>
+    <li><strong>Operational efficiency:</strong> Unified management reduces administrative overhead.</li>
+    <li><strong>Scalability:</strong> A single platform that grows with organizational needs.</li>
+  </ul>
+
+  <p>
+    Sophos Firewall v22 positions the firewall as a core security control within a
+    broader, identity-driven strategy—balancing strong protection with practical
+    administration for modern businesses.
+  </p>
+
+  <div class="share">
+    <a
+      href="https://www.linkedin.com/sharing/share-offsite/?url=https://thqcyberdivision.github.io/blog.html#sophos-firewall-v22"
+      target="_blank"
+      rel="noreferrer noopener"
+    >Share on LinkedIn</a>
+    <a
+      href="https://twitter.com/intent/tweet?text=Sophos%20Firewall%20v22%20Overview%20by%20THQ%20Cyber%20Division&url=https://thqcyberdivision.github.io/blog.html#sophos-firewall-v22"
+      target="_blank"
+      rel="noreferrer noopener"
+    >Share on Twitter</a>
+  </div>
+</article>
+
+
+    
     <!-- Article 1: Cryptography intro -->
     <article id="intro-cryptography">
       <h2>Introduction to Cryptography: What Business Leaders Need to Know</h2>
