--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to;
   style-src 'self' 'unsafe-inline';
-  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com;
+  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://assets.sophos.com;
   frame-src https://embed.tawk.to;
   connect-src 'self';
   font-src 'self';
