Update hero image for cryptography article

--- a/blog.html
+++ b/blog.html
@@ -305,7 +305,7 @@
     <article id="intro-cryptography">
       <h2>Introduction to Cryptography: What Business Leaders Need to Know</h2>
       <p class="meta">Published: 2025-11-25 — Author: THQ Cyber Division</p>
-      <img class="hero-img" src="https://picsum.photos/seed/cryptography-business/1200/420" alt="Abstract cryptography illustration" />
+      <img class="hero-img" src="https://cdn.pixabay.com/photo/2017/09/24/11/59/password-2781614_960_720.jpg" alt="Abstract cryptography illustration" />
 
       <p>Cryptography is the foundation of digital trust: it turns readable information into ciphertext that only authorized parties can reverse, and it provides mechanisms to authenticate identities and verify data integrity. For businesses, cryptography is not just a technical control — it underpins customer trust, regulatory compliance, and many operational systems.</p>
 
