--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to;
   style-src 'self' 'unsafe-inline';
-  img-src 'self' data: https://ipfs.io https://images.seeklogo.com https://ipfs.tech;
+  img-src 'self' data: https://ipfs.io https://images.seeklogo.com https://ipfs.tech https://seeklogo.com;
   frame-src https://www.youtube.com https://embed.tawk.to;
   connect-src 'self';
   font-src 'self';
