--- a/terms.html
+++ b/terms.html
@@ -137,6 +137,8 @@
 	    margin-right: auto;
 	}
   </style>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
