--- a/services.html
+++ b/services.html
@@ -202,6 +202,8 @@
     footer{background:#000; color:#fff; text-align:center; padding:18px 12px; margin-top:28px;}
     
   </style>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
