Insert Google AdSense script in index.html
Added Google AdSense script for advertising.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
     footer nav a{color:#fff;text-decoration:none}
     @media (max-width:640px){header img{width:64px}; .intro h2{font-size:1.25rem}}
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
