--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,8 @@
     }
     footer nav a { color: #fff; margin: 0 5px; text-decoration: underline; }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
