Add Google Ads script to about.html

--- a/about.html
+++ b/about.html
@@ -74,6 +74,8 @@
     footer{background:#111;color:#fff;text-align:center;padding:14px 2px}
     @media (max-width:600px){header img{width:56px}; main{margin:18px auto}}
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
