Add Google Ads script to Sophos_products.html

--- a/Sophos_products.html
+++ b/Sophos_products.html
@@ -140,6 +140,8 @@ header h1 {
       font-size: 0.9rem;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
