--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
 
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to;
+  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to https://pagead2.googlesyndication.com;
   style-src 'self' 'unsafe-inline';
   img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://assets.sophos.com;
   frame-src https://embed.tawk.to;
