--- a/blog.html
+++ b/blog.html
@@ -57,11 +57,11 @@
 
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to https://pagead2.googlesyndication.com;
+  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://pagead2.googlesyndication.com https://www.google-analytics.com https://embed.tawk.to;
   style-src 'self' 'unsafe-inline';
-  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://assets.sophos.com;
-  frame-src https://embed.tawk.to;
-  connect-src 'self';
+  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://assets.sophos.com https://tpc.googlesyndication.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net;
+  frame-src https://embed.tawk.to https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://pagead2.googlesyndication.com https://securepubads.g.doubleclick.net;
+  connect-src 'self' https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net https://stats.g.doubleclick.net;
   font-src 'self';
   object-src 'none';
   base-uri 'self';
