Update blog.html to remove commented ads script
Removed commented Google Ads script and kept the active one.

--- a/blog.html
+++ b/blog.html
@@ -99,10 +99,9 @@
     footer{text-align:center;color:var(--muted);padding:22px 12px;margin-top:28px}
   </style>
   <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
-<!--
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
-     crossorigin="anonymous"></script> -->
-  <script data-ad-client="ca-pub-9920132045090748" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+     crossorigin="anonymous"></script> 
 </head>
 <body>
   <header>
