Update blog.html with new content

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8NQGQSGEVY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag(){dataLayer.push(arguments);} 
   gtag('js', new Date());
 
   gtag('config', 'G-8NQGQSGEVY');
@@ -19,7 +19,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>THQ Cyber Division — Blog: Cryptography & Sectigo SSL</title>
-  <meta name="description" content="Professional introductions to cryptography and the business benefits of Sectigo SSL certificates. THQ Cyber Division provides Sectigo provisioning and lifecycle management." />
+  <meta name="description" content="Professional introductions to cryptography and the business benefits of Sectigo SSL certificates. THQ Cyber Division provides Sectigo provisioning and certificate lifecycle management." />
   <meta name="keywords" content="cryptography, Sectigo, SSL, TLS, certificate provisioning, website security, certificate lifecycle" />
   <link rel="canonical" href="https://thqcyberdivision.github.io/blog.html" />
 
@@ -59,7 +59,7 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://pagead2.googlesyndication.com https://www.google-analytics.com https://embed.tawk.to;
   style-src 'self' 'unsafe-inline';
-  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://assets.sophos.com https://tpc.googlesyndication.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net;
+  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://assets.sophos.com https://tpc.googlesyndication.com https://pagead2.googlesyndication.com;
   frame-src https://embed.tawk.to https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://pagead2.googlesyndication.com https://securepubads.g.doubleclick.net;
   connect-src 'self' https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net https://stats.g.doubleclick.net;
   font-src 'self';
@@ -79,7 +79,7 @@
       --text:#0b1220;
       --radius:12px;
     }
-    html,body{height:100%;margin:0;background:linear-gradient(#ffffff,#f7fbff);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--text);}
+    html,body{height:100%;margin:0;background:linear-gradient(#ffffff,#f7fbff);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--text);} 
     header{background:#000;color:#fff;padding:22px 16px;text-align:center}
     header img{width:88px;border-radius:10px;display:block;margin:0 auto 8px}
     nav{background:#111;display:flex;gap:16px;justify-content:center;padding:10px 8px;flex-wrap:wrap}
@@ -137,12 +137,12 @@
   />
 
   <p>
-    As cyber threats continue to evolve, organizations need comprehensive security tools that protect not only network perimeters, but also applications, code integrity, and digital communications. THQ Cyber Division is excited to introduce three upcoming offerings designed to strengthen your security posture: <strong>DigiCert Code Signing Certificates</strong>, enhanced <strong>Email Security</strong> solutions, and an advanced <strong>Web Application Firewall (WAF)</strong).
+    As cyber threats continue to evolve, organizations need comprehensive security tools that protect not only network perimeters, but also applications, code integrity, and digital communication channels. Our new suite addresses these challenges with integrated solutions that simplify management and improve security outcomes.
   </p>
 
   <h3>DigiCert Code Signing Certificates</h3>
   <p>
-    Software integrity and trust begin at the code level. DigiCert Code Signing Certificates provide developers and organizations with a trusted way to sign software, scripts, and applications. Digitally signing code assures users and endpoint security systems that the software has not been tampered with since it was signed.
+    Software integrity and trust begin at the code level. DigiCert Code Signing Certificates provide developers and organizations with a trusted way to sign software, scripts, and applications. DigiCert’s process helps ensure the publisher identity and prevents tampering during distribution.
   </p>
   <ul>
     <li><strong>Verified publisher identity:</strong> Certificates confirm the software publisher’s identity to end users and systems.</li>
@@ -156,7 +156,7 @@
 
   <h3>Advanced Email Security Solutions</h3>
   <p>
-    Email remains one of the primary attack vectors for phishing, business email compromise (BEC), and malware distribution. Our upcoming email security suite combines advanced filtering, authentication, and encryption to safeguard communications across your organization.
+    Email remains one of the primary attack vectors for phishing, business email compromise (BEC), and malware distribution. Our upcoming email security suite combines advanced filtering, authentication enforcement, and encryption to reduce risk and improve trust.
   </p>
   <ul>
     <li><strong>Spam & phishing protection:</strong> Machine learning–enhanced filters identify and block malicious email before it reaches users.</li>
@@ -170,7 +170,7 @@
 
   <h3>Web Application Firewall (WAF) Solutions</h3>
   <p>
-    Modern applications face a broad spectrum of threats, from SQL injection and cross-site scripting (XSS) to bot attacks and layer 7 DDoS. A Web Application Firewall (WAF) acts as a robust security layer that inspects and filters HTTP/HTTPS traffic to protect web applications from known and emerging threats.
+    Modern applications face a broad spectrum of threats, from SQL injection and cross-site scripting (XSS) to bot attacks and layer 7 DDoS. A Web Application Firewall (WAF) acts as a robust security layer to protect application logic and data.
   </p>
   <ul>
     <li><strong>SQL injection & XSS protection:</strong> Guard against common application-layer attacks.</li>
@@ -184,10 +184,10 @@
 
   <h3>Business Benefits of a Unified Security Strategy</h3>
   <p>
-    While each of these products serves a unique role—code signing for software integrity, email security for communications protection, and WAF for application defense—together they contribute to a unified and resilient security strategy. Businesses that invest in layered defenses see reduced risk, enhanced customer trust, and improved operational stability.
+    While each of these products serves a unique role—code signing for software integrity, email security for communications protection, and WAF for application defense—together they contribute to a layered, defensible architecture that reduces operational risk.
   </p>
   <p>
-    THQ Cyber Division’s upcoming offerings are designed to simplify procurement, integrate seamlessly with existing infrastructure, and provide enterprise-grade controls with manageable administration.
+    THQ Cyber Division’s upcoming offerings are designed to simplify procurement, integrate seamlessly with existing infrastructure, and provide enterprise-grade controls with manageable administration overhead.
   </p>
 
   <div class="share">
@@ -301,7 +301,6 @@
   </div>
 </article>
 
-
     
     <!-- Article 1: Cryptography intro -->
     <article id="intro-cryptography">
@@ -309,7 +308,7 @@
       <p class="meta">Published: 2025-11-25 — Author: THQ Cyber Division</p>
       <img class="hero-img" src="https://cdn.pixabay.com/photo/2017/09/24/11/59/password-2781614_960_720.jpg" alt="Abstract cryptography illustration" />
 
-      <p>Cryptography is the foundation of digital trust: it turns readable information into ciphertext that only authorized parties can reverse, and it provides mechanisms to authenticate identities and verify data integrity. For businesses, cryptography is not just a technical control — it underpins customer trust, regulatory compliance, and many operational systems.</p>
+      <p>Cryptography is the foundation of digital trust: it turns readable information into ciphertext that only authorized parties can reverse, and it provides mechanisms to authenticate identities and verify message integrity.</p>
 
       <p>Core concepts:</p>
       <ul>
@@ -319,9 +318,9 @@
         <li><strong>Key management:</strong> Secure generation, storage, rotation, and revocation of cryptographic keys is essential — weak key management, not algorithms, is the common failure mode.</li>
       </ul>
 
-      <p>Practical business implications: properly configured TLS (HTTPS) prevents interception and impersonation, protecting customer data and preserving brand reputation. Strong cryptography and disciplined lifecycle management also reduce regulatory risk and support secure integrations with partners and platforms.</p>
+      <p>Practical business implications: properly configured TLS (HTTPS) prevents interception and impersonation, protecting customer data and preserving brand reputation. Strong cryptography and sound operational practices reduce the risk of catastrophic breaches.</p>
 
-      <p>THQ Cyber Division provides advisory and operational services to translate cryptographic principles into actionable programs: inventories of cryptographic usage, risk-based prioritization, key-management guidance, and hands-on support for certificate provisioning and lifecycle automation.</p>
+      <p>THQ Cyber Division provides advisory and operational services to translate cryptographic principles into actionable programs: inventories of cryptographic usage, risk-based prioritization, and automation of certificate lifecycle.</p>
 
       <div class="share">
         <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thqcyberdivision.github.io/blog.html#intro-cryptography" target="_blank" rel="noreferrer noopener">Share on LinkedIn</a>
@@ -336,20 +335,20 @@
       <p class="meta">Published: 2025-11-25 — Author: THQ Cyber Division</p>
       <img class="hero-img" src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo logo" />
 
-      <p>Sectigo is a major certificate authority offering a comprehensive range of SSL/TLS products for businesses — from single-domain OV/EV certificates to wildcard and multi-domain SAN products. When deployed and managed correctly, Sectigo certificates deliver tangible business benefits: protection of customer data, demonstrable identity assurance, and operational convenience for certificate lifecycle tasks.</p>
+      <p>Sectigo is a major certificate authority offering a comprehensive range of SSL/TLS products for businesses — from single-domain OV/EV certificates to wildcard and multi-domain SAN products.</p>
 
       <p>Primary business benefits:</p>
       <ul>
-        <li><strong>Customer trust & brand protection:</strong> Trusted certificates prevent site impersonation and display browser security indicators; EV/OV certificates provide stronger identity signals to customers and partners.</li>
+        <li><strong>Customer trust & brand protection:</strong> Trusted certificates prevent site impersonation and display browser security indicators; EV/OV certificates provide stronger identity assurance.</li>
         <li><strong>Data protection:</strong> TLS encryption prevents unauthorized interception of credentials, personal data, and payment information during transit.</li>
         <li><strong>Regulatory & partner requirements:</strong> Many compliance frameworks and partner integrations require properly authenticated TLS sessions and auditable certificate handling.</li>
         <li><strong>Flexible deployment:</strong> Wildcard and SAN certificates reduce management overhead across many subdomains and services; Sectigo's product set supports varied enterprise topologies.</li>
         <li><strong>Operational assurances:</strong> Warranty coverage, reissue policies, and documented validation processes provide an additional layer of risk management.</li>
       </ul>
 
-      <p>Common operational pitfalls include expired certificates, inconsistent key storage, and manual renewal processes that lead to outages. These are avoidable with automated renewal, centralized key storage, monitoring, and documented emergency revocation procedures.</p>
+      <p>Common operational pitfalls include expired certificates, inconsistent key storage, and manual renewal processes that lead to outages. These are avoidable with automated renewal, centralized management, and robust key protection.</p>
 
-      <p>THQ Cyber Division provides end-to-end Sectigo services: product selection (OV, EV, wildcard, multi-domain), validation and issuance, secure key storage recommendations, automation of renewals, installation and configuration guidance (including HSTS and secure TLS parameters), and rapid revocation support if needed. Our service minimizes operational friction while ensuring the highest practical level of trust for customers and partners.</p>
+      <p>THQ Cyber Division provides end-to-end Sectigo services: product selection (OV, EV, wildcard, multi-domain), validation and issuance, secure key storage recommendations, automation of renewal, and lifecycle monitoring.</p>
 
       <div class="share">
         <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thqcyberdivision.github.io/blog.html#sectigo-ssl-benefits" target="_blank" rel="noreferrer noopener">Share on LinkedIn</a>
@@ -358,10 +357,69 @@
       </div>
     </article>
 
+    <!-- New Article: GDPR — One Simple Step -->
+    <article id="gdpr-one-step">
+      <h2>How to Satisfy Multiple GDPR Requirements with One Simple Step</h2>
+      <p class="meta">Published: 2026-01-31 — Author: THQ Cyber Division</p>
+
+      <img class="hero-img" src="https://cdn.pixabay.com/photo/2016/11/29/09/32/laptop-1867751_960_720.jpg" alt="Data protection and privacy illustration" />
+
+      <h3>What is the GDPR</h3>
+      <p>
+        GDPR is a broad-reaching regulation designed to protect the private data of Europeans in IT systems. It covers a wide range of topics, from how and when to notify regulators about data breaches to user transparency about what data is being collected and why.
+      </p>
+
+      <h3>You’re asking the wrong question</h3>
+      <p>
+        Most companies are still asking, “Does the GDPR apply to us?” From a practical standpoint, here are a few criteria that determine who’s impacted:
+      </p>
+      <ul>
+        <li>You have customers, employees or contractors who are EU citizens or based in EU countries (the United Kingdom counts).</li>
+        <li>You do business in Europe, even if your business is located elsewhere.</li>
+        <li>You have an online presence (including your website) that’s available for Europeans to use.</li>
+      </ul>
+      <p>
+        Spending resources trying to exclude your company from GDPR isn’t the best use of time. There are business considerations beyond fines that affect partnerships, customer trust, and market access.
+      </p>
+
+      <h3>Non-Compliance Can Be Crushing</h3>
+      <p>
+        A single data breach can result in a fine of €20 million or up to 4% of annual turnover, whichever is greater. Fines aside, breaches create reputational damage, legal fees, and remediation costs that can be far more harmful to a business.
+      </p>
+
+      <h3>SSL is an Essential Part of GDPR Compliance</h3>
+      <p>
+        While GDPR doesn’t explicitly mandate SSL certificates, it requires technical and organisational measures to ensure security. Article 32 highlights the need for encryption and measures that ensure confidentiality and integrity of personal data.
+      </p>
+      <p>
+        If your site collects or stores user information, you are responsible for keeping that data secure — including encrypting personal data in transit. Many reported breaches involve unencrypted or poorly protected data; using TLS/SSL reduces the risk that intercepted data can be abused.
+      </p>
+
+      <h3>SSL Delivers Other Business Benefits</h3>
+      <ul>
+        <li><strong>Faster website performance:</strong> TLS enables HTTP/2, improving page load times and user experience.</li>
+        <li><strong>Search engine visibility:</strong> HTTPS is a ranking signal in search engines and can boost traffic.</li>
+        <li><strong>Mobile feature support:</strong> Modern browser features often require secure contexts (HTTPS).</li>
+        <li><strong>Increased conversions:</strong> Visitors are more likely to complete transactions when a site presents strong security indicators.</li>
+        <li><strong>Phishing resistance:</strong> Strong validation processes (e.g., OV/EV certificates) make impersonation harder for attackers.</li>
+      </ul>
+
+      <h3>Check SSL Off Your GDPR Compliance To‑do List</h3>
+      <p>
+        Ensuring all website pages use TLS/SSL for authentication and encryption is a practical, high-impact step toward meeting GDPR’s security expectations. Even organisations not fully subject to GDPR benefit from stronger data protection and improved customer trust.
+      </p>
+
+      <div class="share">
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thqcyberdivision.github.io/blog.html#gdpr-one-step" target="_blank" rel="noreferrer noopener">Share on LinkedIn</a>
+        <a href="https://twitter.com/intent/tweet?text=How%20to%20Satisfy%20Multiple%20GDPR%20Requirements%20with%20One%20Simple%20Step&url=https://thqcyberdivision.github.io/blog.html#gdpr-one-step" target="_blank" rel="noreferrer noopener">Share on Twitter</a>
+        <a class="cta" href="services.html">Review Certificate & Compliance Services</a>
+      </div>
+    </article>
+
   </main>
 
   <footer>
-    <p style="margin:6px 0">&copy; 2024–2025 THQ Cyber Division Unincorporated</p>
+    <p style="margin:6px 0">&copy; 2024–2026 THQ Cyber Division Unincorporated</p>
     <nav aria-label="footer links">
       <a href="terms.html" style="text-decoration:none;color:#fff">Terms</a> |
       <a href="privacy.html" style="text-decoration:none;color:#fff">Privacy</a> |
